--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,22 @@
 .App {
   text-align: center;
+ 
 }
 
 .App-header {
   background-color: #314e52;
   min-height: 100vh;
   min-width: fit-content;
+}
+
+
+
+h1 {
+  font-family: 'Ubuntu';
+}
+
+p {
+  font-family: 'Ubuntu';
 }
 
 .outer-container{
@@ -63,20 +74,20 @@ a.active-link {
   color: #f2a154;
 }
 
-@media(max-width: 500px) {
-  .nav-container{
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-    justify-content: center;
-  }
-}
 @media(max-width: 768px) {
   .nav-container{
     display: flex;
     flex-direction: row;
     margin: 0;
     justify-content: flex-end;
+  }
+
+  .presentation-container{
+    font-size: 1.5rem;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    width: 100%;
   }
 }
 
@@ -123,6 +134,18 @@ a.active-link {
   text-align: center;
 }
 
+@media(max-width: 768px) {
+  .skills-section {
+    padding: 2rem 2rem;
+    width: 100%;
+    line-height: 2;
+    display: flex;
+    flex-direction: column;
+    background-color: #f4f5db;
+    /* margin: 10px 0; */
+  }
+}
+
 /* ABOUT ME SECTION */
 .about-section{
   display: flex;
@@ -148,12 +171,11 @@ a.active-link {
 .about-biography{
   color: #f2a154;
   font-family: 'Ubuntu';
-  font-size: 1rem;
   width: 50%;
   margin: auto;
   margin-top: 5rem;
   padding: 3rem;
-  font-size: 1.5rem;
+  font-size: 2.5rem;
 }
 
 .avatar {
@@ -162,9 +184,15 @@ a.active-link {
   height: 400px;
   padding: 1rem;
   border-radius: 50%;
+  margin: 5rem 0;
 }
 
 @media screen and (max-width: 768px) {
+
+  #about{
+    width: fit-content;
+  }
+
   .about-container{
     display: flex;
     flex-direction: column;
@@ -183,9 +211,9 @@ a.active-link {
   .about-biography{
     color: #f2a154;
     font-family: 'Ubuntu';
-    font-size: 1rem;
+    width: 50%;
     margin: auto;
-    padding: 3rem;
+    font-size: 1rem;
   }
   
 }
@@ -197,10 +225,104 @@ a.active-link {
   display: flex;
   flex-direction: row;
   background-color: #f4f5db;
-  height: 70vh;
   margin: 0;
 }
 
-/* Insert left div & right div */
+.contact-left {
+  padding: 1rem;
+  width: 30%;
+  margin: 5rem;
+  border: 1px solid;
+  box-shadow: 10px 10px;
+  border-radius: 100px;
+}
+
+.contact-left h1 {
+  font-family: 'Ubuntu' ;
+}
+
+.contact-left p {
+  line-height: 3;
+  width: 15rem;
+  margin: auto;
+  font-size: larger;
+  font-family: 'Ubuntu';
+}
+
+.contact-right{
+  width: 50%;
+  margin: auto;
+  border: 1px solid;
+  border-radius: 40px;
+  box-shadow: 10px 10px;
+}
+
+
+.contact-right a {
+  text-decoration: none;
+  color: black;
+}
+
+.btn-scroll{
+  position:fixed;
+  width:60px;
+  height:60px;
+  bottom: 40px;
+  right: 6px;
+  color: black;
+  text-align:center;
+}
+
+.footer {
+  min-height: 10vh;
+  background-color: #314e52;
+}
+
+.footer p {
+  font-size: 1rem;
+  padding: 3rem;
+  margin: 0;
+}
+
+
+
+@media(max-width: 768px) {
+  .contact-section{
+    display: flex;
+    flex-direction: column;
+    background-color: #f4f5db;
+    min-width: max-content;
+    margin: 0;
+    height: 100vh;
+  }
+
+
+  .contact-left {
+    border: 1px solid;
+    width: 60%;
+    margin: 1rem 3rem;
+    box-shadow: 10px 10px;
+    border-radius: 100px;
+  }
+
+  .contact-right{
+    width: 60%;
+    height: 37vh;
+    margin: 1rem 4rem;
+    border: 1px solid;
+    border-radius: 40px;
+    box-shadow: 10px 10px;
+  }
+
+  .btn-scroll{
+    position:fixed;
+    width:40px;
+    height:40px;
+    bottom: 40px;
+    right: 70px;
+    text-align:center;
+  }
+}
+
 
 
